@@ -5,6 +5,7 @@
   * Option "chandiscon" to define what to do with channels when server
     drops the connection
   * Option not to redirect stdout into logfile
+  * Fixed illegal memory access at parting channel when chanlog compiled in
   * Fixed minor memory leak in rehash
   * Fixed nick rotation
   * Fixed sample-miaurc
